Foi feito alterações no codigo e no desing

--- a/src/trabalho/view/Principal.form
+++ b/src/trabalho/view/Principal.form
@@ -85,7 +85,7 @@
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/trabalho/img/Cadastrar funcionario.png"/>
+              <Image iconType="3" name="/trabalho/img/cadastrarFuncionario.png"/>
             </Property>
           </Properties>
         </Component>
@@ -106,21 +106,21 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/trabalho/img/Listar Registro.png"/>
+              <Image iconType="3" name="/trabalho/img/listarRegistro.png"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/trabalho/img/Marcar ponto.png"/>
+              <Image iconType="3" name="/trabalho/img/marcarPonto.png"/>
             </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/trabalho/img/Registrar ponto.png"/>
+              <Image iconType="3" name="/trabalho/img/registrarPonto.png"/>
             </Property>
           </Properties>
         </Component>
