--- a/src/trabalho/view/RegistroPonto.form
+++ b/src/trabalho/view/RegistroPonto.form
@@ -150,7 +150,7 @@
         <Component class="javax.swing.JLabel" name="iniciarTurnoButton">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/trabalho/img/iniciarTurno.png"/>
+              <Image iconType="3" name="/trabalho/img/IniciarTurno.jpg"/>
             </Property>
           </Properties>
           <Events>
@@ -160,7 +160,7 @@
         <Component class="javax.swing.JLabel" name="finalizarTurnoButton">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/trabalho/img/finalizarTurno.png"/>
+              <Image iconType="3" name="/trabalho/img/FinalizarTurno.jpg"/>
             </Property>
           </Properties>
           <Events>
